# single-gpu-inference-lab

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/: kernelbench_l20_elementwise.json  kernelbench_l20_holdout.json  kernelbench_l20_pilot.json  l20_operator_targets.json  qlora_l20_14b_smoke.json  qlora_l20_kernel_1_5b_pilot.json  qlora_l20_kernel_1_5b_v2.json  qlora_l20_kernel_1_5b_v3.json  qlora_l20_kernel_1_5b_v4.json  qlora_l20_smoke.json
cpp/: m4_gguf_q4k.hpp  m4_q4_matvec.cpp  m4_q4k_gguf.cpp  m4_q4k_sme2.cpp  my.cpp
docs/: cpu-l20-break-even-case-study.md  cpu-small-model-boundary.md  experiment-status.md  hardware-scope.md  l20-hybrid-tree-attention.md  l20-kv-decode-pipeline-blueprint.md  l20-next-improvements.md  l20-operator-research.md  l20-qlora-research.md  l20-serving-case-study.md  l20-serving-integration.md  l20-sparse-penalty-case-study.md  l20-top-tier-kernel-gaps.md  logits-boundary-ab.md  logits-boundary-rfc.md  m4-q4k-sme2-case-study.md  repo-map.md  reviewer-guide.md  roadmap.md  sampling-correctness-notice-2026-07.md  vllm-upstream-patch.md  where-optimizations-stop-mattering.md
scripts/: analyze_decode_layer.py  analyze_rmsnorm_policy.py  analyze_serving_optimization_ceiling.py  analyze_vllm_serving.py  bench_cpu_llama_bench.sh  bench_cpu_real_model.sh  bench_cpu_tiny_transformer.sh  bench_m4_q4_matvec.sh  benchmark_cpu_real_model.py  benchmark_cuda_paged_decode.py  benchmark_decode_layer.py  benchmark_flashinfer_sampling.py  benchmark_l20_topk_topp_penalty_sampling.py  benchmark_l20_topk_topp_sampling.py  benchmark_lm_head_topk_boundary.py  benchmark_longspec_irregular_tree.py  benchmark_m4_q4_matvec_matrix.py  benchmark_m4_sme2_qwen3b.py  benchmark_mlx_qwen.py  benchmark_paged_fp8_kv_decode_attention.py  benchmark_paged_rope_kv.py  benchmark_rmsnorm.py  (+64 more)
(+1116 files in other folders)
